# KeyboardTrainer

./: App.cpp  App.h  CMakeLists.txt  DataManager.cpp  DataManager.h  KeyboardTrainer.cpp  KeyboardTrainer.h  KeyboardTrainer.ui  Level.cpp  Level.h  MainWindow.cpp  MainWindow.h  MyLineEdit.cpp  MyLineEdit.h  Records.cpp  Records.h  RecordsWindow.cpp  RecordsWindow.h  Resources.qrc  Trainer.cpp  Trainer.h  TypingSession.cpp  TypingSession.h  User.cpp  User.h  UserDialog.cpp  UserDialog.h  UserDialog.ui  main.cpp  words
resources/: letters.txt  long_sentences.txt  sentences.txt  words.txt
